<resources>
    <string name="app_name">WeightTrackerApp</string>
    <string name="current_weight">Current Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="weight_change">Weight Change</string>
    <string name="days_to_goal">Days to Goal</string>
    <string name="enter_daily_weight">Enter Daily Weight</string>
    <string name="add_weight">Add Weight</string>
    <string name="add">+</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="permissions">We are requesting SMS permissions to send weight tracking reminders and notifications for when your goal is reached. Rest assured, we prioritize your privacy and only use this data for essential app functions, we never share with third parties</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="sms_permission">SMS Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="allow_sms_notifications">Allow SMS notifications?</string>
    <string name="change_goal_weight">Change Goal Weight</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="update_profile">Update Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning">warning</string>
    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="lbs">lbs</string>
    <string name="weight_history">Weight History</string>
    <string name="choose_a_goal_date">Choose a Goal Date:</string>
    <string name="calendar">Calendar</string>
    <string name="delete">Delete</string>
    <string name="edit_button">Edit Button</string>
    <string name="goal_date">Goal Date</string>
    <string name="dash_goal">100.25 lbs</string>
    <string name="add_data">add data</string>
    <string name="enter_new_weight">Enter new weight</string>
    <string name="update_weight">Update Weight</string>
    <string name="update">Update</string>
    <string name="phone_number">Phone Number: X-XXX-XXX-XXXX</string>
</resources>