<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_weight"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_weight"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_gravity="end"/>
</LinearLayout>