<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/drk_blue"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="40dp"
            android:autofillHints="Username"
            android:background="@drawable/custom_input_box"
            android:drawableStart="@drawable/username_icon"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="20dp"
            android:autofillHints="Password"
            android:background="@drawable/custom_input_box"
            android:drawableStart="@drawable/pass_lock_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/curr_weight"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="20dp"
            android:autofillHints="Current Weight"
            android:background="@drawable/custom_input_box"
            android:drawableStart="@drawable/baseline_monitor_weight_24"
            android:drawablePadding="10dp"
            android:hint="@string/current_weight"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
        android:id="@+id/goal_weight"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:autofillHints="Goal Weight"
        android:background="@drawable/custom_input_box"
        android:drawableStart="@drawable/baseline_monitor_weight_24"
        android:drawablePadding="10dp"
        android:hint="@string/goal_weight"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/cal_date"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:layout_marginTop="20dp"
            android:autofillHints="Goal Date"
            android:gravity="left|center"
            android:textSize="19sp"
            android:background="@drawable/custom_input_box"
            android:drawablePadding="10dp"
            android:hint="@string/goal_date"
            android:clickable="true"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            app:drawableStartCompat="@drawable/baseline_calendar_month_24" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>