<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFrag">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/misty_blue"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_input_box"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/ProfileText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/drk_blue"
                    android:textSize="36sp" />

                <EditText
                    android:id="@+id/profile_username"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_input_box"
                    android:drawableStart="@drawable/username_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="Username" />

                <EditText
                    android:id="@+id/profile_password"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_input_box"
                    android:drawableStart="@drawable/pass_lock_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="Password" />
                
                <EditText
                    android:id="@+id/profile_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_input_box"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/phone_number"
                    android:textSize="18sp"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="Password" />

                <EditText
                    android:id="@+id/profile_goal_weight"
                    android:layout_width="fill_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_input_box"
                    android:drawableStart="@drawable/baseline_monitor_weight_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/change_goal_weight"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:autofillHints="Password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="221dp"
                        android:layout_height="52dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/drk_blue"
                        android:text="@string/allow_sms_notifications"
                        android:textSize="18sp"
                        app:cornerRadius="20dp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sms_switch"
                        android:layout_width="59dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_profile"
                android:layout_width="140sp"
                android:layout_height="64dp"
                android:layout_gravity="center|top"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/drk_blue"
                android:text="@string/delete_profile"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/update_profile"
                android:layout_width="140sp"
                android:layout_height="65dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/drk_blue"
                android:text="@string/update_profile"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
