<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="225dp"
        android:layout_height="195dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/phoenix_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/login_card"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/drk_blue"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_input_box"
                android:drawableStart="@drawable/username_icon"
                android:drawablePadding="10dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="Username" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input_box"
                android:drawableStart="@drawable/pass_lock_icon"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints="Password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login"
                    android:layout_width="140sp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/drk_blue"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="20dp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="140sp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/drk_blue"
                    android:text="@string/sign_up"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:cornerRadius="20dp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/reset_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/drk_blue"
        android:text="@string/forgot_password" />


</LinearLayout>