<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryFrag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/misty_blue"
            android:gravity="center"
            android:text="@string/weight_history"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="411dp"
            android:layout_height="723dp"
            android:contentDescription="@string/weight_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0">

            <!--Row card to be used to input User data from input and database-->
            <!--This will be implemented with RecyclerView to have scrollable data-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/history_card"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/editButton"
                    android:layout_width="64dp"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:tooltipText="Edit Weight"
                    android:contentDescription="@string/edit_button"
                    android:src="@drawable/baseline_edit_24"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/btnDelete"
                    android:layout_width="65dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/delete"
                    android:src="@drawable/baseline_delete_forever_24"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>

        <!--
        Button to add desired weight data (not sure if I should make date selectable as well).
        Used Floating action button here for practice - could just implement similar
        function as in dash.xml with input box with button
         -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="60dp"
            android:layout_height="58dp"
            android:clickable="true"
            android:contentDescription="add data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.895"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="0.444"
            app:maxImageSize="56dp"
            app:srcCompat="@drawable/baseline_add_24" />

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="102dp"
            android:orientation="horizontal"
            android:background="@color/misty_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
